vpc-subnets.tf
resource "aws_vpc" "k8s-vpc" {
  cidr_block           = var.vpc.cidr
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {
    Name = "k8s-vpc"
  }
}

resource "aws_subnet" "public-subnet-1" {
  cidr_block              = var.vpc.public_subnet_1_cidr
  vpc_id                  = aws_vpc.k8s-vpc.id
  availability_zone       = var.aws.availability_zones[0]
  map_public_ip_on_launch = true
  tags = {
    Name = "public-k8s-subnet-1"
  }
}
resource "aws_subnet" "public-subnet-2" {
  cidr_block              = var.vpc.public_subnet_2_cidr
  vpc_id                  = aws_vpc.k8s-vpc.id
  availability_zone       = var.aws.availability_zones[1]
  map_public_ip_on_launch = true
  tags = {
    Name = "public-k8s-subnet-2"
  }
}

resource "aws_subnet" "private-subnet-1" {
  tags = {
    Name = "private-k8s-subnet-1"
  }
  cidr_block        = var.vpc.private_subnet_1_cidr
  vpc_id            = aws_vpc.k8s-vpc.id
  availability_zone = var.aws.availability_zones[0]
}
resource "aws_subnet" "private-subnet-2" {
  tags = {
    Name = "private-k8s-subnet-2"
  }
  cidr_block        = var.vpc.private_subnet_2_cidr
  vpc_id            = aws_vpc.k8s-vpc.id
  availability_zone = var.aws.availability_zones[1]
}
